from typing import TypedDict

class Venta(TypedDict):
    id = int
    fecha = str
    ganancia = float
    